--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 
     <section class="hero-image">
       <div class="container">
-      <h1 class="heading">Степанова Екатерина</h1>
+      <h1 class="heading">Степанова Екатерина Ивановна</h1>
       <p>Junior верстальщик</p>
     </div>
     </section>
