--- a/index.html
+++ b/index.html
@@ -11,8 +11,8 @@
   <body>
     <header class="page-header">
       <div class="container">
-      +79113034277
-      ekatrinkn05@gmail.com
+      <a class="header-phone" href="tel:+79113034277">+79113034277</a>
+      <a class="header-email" href="mailto:ekatrinkn05@gmail.com">ekatrinkn05@gmail.com</a>
     </div>
     </header>
 
@@ -26,6 +26,9 @@
     <section class="intro">
       <div class="container">
       <h2 class="subheading">Давайте познакомимся</h2>
+      <figure>
+        <img class="user-image" src="img\photo.jpg" width="300" weihgt="600" alt="Фотография">
+      </figure>
       <h3>Пара слов о себе</h3>
       <p>Мне 24 года, ищу себя</p>
       <h3>Чем могу быть полезна</h3>
@@ -36,6 +39,15 @@
     <section class="portfolio">
       <div class="container">
       <h2 class="subheading">Мои работы</h2>
+      <figure class="project-image">
+        <img src="img\project.jpg" width="928" height="536" alt="Cайт магазина товаров для дома">
+      </figure>
+      <a class="button" href="#">Открыть страницу</a>
+      <br>
+      <br>
+      
+
+
 
       <h3>Магазин товаров для дома</h3>
       <p>Мой первый сайт.</p>
@@ -47,8 +59,8 @@
 
     <footer class="page-footer">
       <div class="container">
-      +79113034277
-      ekatrinkn05@gmail.com
+        <a class="footer-phone" href="tel:+79113034277">+79113034277</a>
+        <a class="footer-email" href="mailto:ekatrinkn05@gmail.com">ekatrinkn05@gmail.com</a>
     </div>
     </footer>
   </body>
