--- a/index.html
+++ b/index.html
@@ -33,6 +33,15 @@
       <p>Мне 24 года, ищу себя</p>
       <h3>Чем могу быть полезна</h3>
       <p>Когда нахожу свое дело, отдаю себя всю - полностью :D</p>
+      <div class="slills">
+        <h3>Мои навыки</h3>
+        <dl class="skills-list">
+          <dt class="skill-html">HTML</dt>
+          <dd class="level"><div style="width: 60%;">60%</div></dd>
+          <dt class="skill-css">CSS</dt>
+          <dd class="level"><div style="width: 40%;">40%</div></dd>
+        </dl>
+      </div>
     </div>
     </section>
 
